# HashTable

./: .gitignore  CMakeLists.txt  Checker.cpp  Checker.h  Tree.h  VectorChecker.cpp  VectorChecker.h  main.cpp
checker/: Checker.cpp  Checker.h  HashChecker.cpp  HashChecker.h  HashTable.cpp  HashTable.h  MyHashChecker.cpp  MyHashChecker.h  TreeChecker.cpp  TreeChecker.h  TrieChecker.cpp  TrieChecker.h  VectorChecker.cpp  VectorChecker.h
classes/: Tree.h  Trie.cpp  Trie.h
texts/: aliceWrongWords.txt  my.txt  wrongWords.txt
